// Vitest Snapshot v1

exports[`Link > should do nothing on click when disabled 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-1jnqd87"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="https://app.arkvault.io/"
    rel="noopener noreferrer"
  >
    <span
      class="css-1lmkmoz"
    >
      app.arkvault.io
    </span>
    <div
      class="mb-[3px] shrink-0 align-middle text-theme-secondary-500 duration-200 dark:text-theme-secondary-700 inline-block text-sm css-v0ob3f"
      data-testid="Link__external"
      height="16"
      width="16"
    >
      <svg
        id="arrow-external"
        viewBox="0 0 20 20"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link > should open an external link 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-15tcy38"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="https://app.arkvault.io/"
    rel="noopener noreferrer"
  >
    <span
      class="css-1y2194z"
    />
    <div
      class="mb-[3px] shrink-0 align-middle text-theme-secondary-500 duration-200 dark:text-theme-secondary-700 css-v0ob3f"
      data-testid="Link__external"
      height="16"
      width="16"
    >
      <svg
        id="arrow-external"
        viewBox="0 0 20 20"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link > should render 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-15tcy38"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="#/test"
  >
    <span
      class="css-1y2194z"
    >
      Test
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link > should render external without children 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-15tcy38"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="https://app.arkvault.io"
    rel="noopener noreferrer"
  >
    <span
      class="css-1y2194z"
    />
    <div
      class="mb-[3px] shrink-0 align-middle text-theme-secondary-500 duration-200 dark:text-theme-secondary-700 css-v0ob3f"
      data-testid="Link__external"
      height="16"
      width="16"
    >
      <svg
        id="arrow-external"
        viewBox="0 0 20 20"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link > should render with tooltip 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-15tcy38"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="#/test"
  >
    <span
      class="css-1y2194z"
    >
      Test
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link > should show a toast when trying to open an invalid external link 1`] = `
<DocumentFragment>
  <a
    class="ring-focus group inline-block css-15tcy38"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="invalid-url"
    rel="noopener noreferrer"
  >
    <span
      class="css-1y2194z"
    />
    <div
      class="mb-[3px] shrink-0 align-middle text-theme-secondary-500 duration-200 dark:text-theme-secondary-700 css-v0ob3f"
      data-testid="Link__external"
      height="16"
      width="16"
    >
      <svg
        id="arrow-external"
        viewBox="0 0 20 20"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </a>
</DocumentFragment>
`;
